# tauri-py

./: .gitignore  context.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: release.yml
py-sidecar/: main.py  tauri-py-daemon.spec
py-sidecar/browser/: __init__.py  chrome_cdp.py  control.py  errors.py  install.py  instance.py  launch.py  module.py  page.py  pages.py  registry.py  wrapper.py
py-sidecar/linkedin/: __init__.py
py-sidecar/modules/: __init__.py
py-sidecar/runtime/: __init__.py  app.py  builder_app.py  bus_message.py  daemon.py  error_log.py  facade.py  loop.py  registry.py  req_res.py  tauri.py  transport.py
py-sidecar/tasks/: __init__.py  base.py  manager.py  module.py  registry.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/20260619000001_init_sessions/: down.sql  up.sql
src-tauri/migrations/20260619000002_init_runs/: down.sql  up.sql
src-tauri/src/: lib.rs  macros.rs  main.rs
src-tauri/src/core/: builder_app.rs  config.rs  facade.rs  handler.rs  mod.rs  registry.rs  req_res.rs  ui_app.rs
src-tauri/src/db/: migrate.rs  mod.rs  models.rs  runs.rs  sessions.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/runs/: events.rs  mod.rs  payload.rs  routes.rs  types.rs
src-tauri/src/modules/sessions/: events.rs  mod.rs  payload.rs  routes.rs  types.rs
src-tauri/src/sidecar/: bus.rs  mod.rs
src-tauri/src/utils/: browser.rs  log.rs  mod.rs  sidecar.rs
src/components/: BrowserPanel.tsx  CheckingScreen.tsx  (+4 more)
(+65 files in other folders)
