[project]
name = "python-daemon"
version = "0.1.0"
description = "Python daemon for the Tauri app"
requires-python = ">=3.11"
dependencies = ["playwright>=1.49"]

[dependency-groups]
build = ["pyinstaller>=6.10"]
dev = [
    "pyright>=1.1.410",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["py-sidecar/runtime", "py-sidecar"]
pythonVersion = "3.11"
